网络请求完成

--- a/lib_network/build.gradle
+++ b/lib_network/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation this.rootProject.depsLibs.appcompat
+    api rootProject.depsLibs.okhttp
+    compileOnly rootProject.depsLibs.gson
 }
